fixed issue with extra space on the right of the nav bar, and added flex display to the navigation

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,11 @@
 		INDEX
 ======================*/
 
-html {
-	height:100%;
-}
 
-body {
+html, body {
 	height: 100%;
-	padding-bottom: 70px; 
+	width: 100%;
+	padding: 0; 
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -16,37 +14,13 @@ body {
 	font-family: 'Quicksand', sans-serif;
 	min-height: 400px;
    margin-bottom: 150px;
-   clear: both;
+   overflow-x: hidden;
 	
 }
 
-.nav-fixed-top {
-	background-color: #eee;
-}
-
-#wrapper{
+/*#wrapper{
 	margin-bottom: 170px;
-}
-
-footer{
-          padding-top: 5px;
-          background-color: #eee;
-          text-align: center;
-          border-radius: 10px;
-          margin:10px 0 0 0;
-          
-}
-
-
-.miniLink {
-	width: 50px ;
-	margin: 20px;
-}
-
-.glyphicon-envelope {
-	font-size: 40px;
-	margin: 10px;
-}
+}*/
 
 .container_body{
 	background-color: #eee;
@@ -58,6 +32,26 @@ footer{
     padding: 10px;
 }
 
+/*==================== 
+	 NAVIGATION 
+======================*/
+
+#navigation {
+	padding:0;
+	margin:0; 
+}
+
+.nav-fixed-top {
+	background-color: #eee;
+}
+
+.nav-container {
+	display:flex;
+	justify-content: flex-end;
+	align-items:center;
+	padding-left: 10px;
+}
+
 #bandTitle {
 	font-size:40px;
 	font-family: 'Permanent Marker', cursive;
@@ -66,11 +60,34 @@ footer{
 .nav-brand, h1, a {
 	color: black;
 	text-decoration:none;
+	margin-right:auto;
 }
 
 .nav-brand, h1, a:hover {
 	text-decoration:none;
 
+}
+
+/*==================== 
+		FOOTER
+======================*/
+
+footer{
+          padding-top: 5px;
+          background-color: #eee;
+          text-align: center;
+          border-radius: 10px;
+          margin:10px 0 0 0;         
+}
+
+.miniLink {
+	width: 50px ;
+	margin: 20px;
+}
+
+.glyphicon-envelope {
+	font-size: 40px;
+	margin: 10px;
 }
 
 /*==================== 
@@ -84,11 +101,7 @@ footer{
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-
-	
-
 }
-
 
 #homePageTxt {
 	margin:10px;
@@ -304,6 +317,10 @@ th {
 @media (max-width: 480px) {
 	#wrapper{
 		padding-bottom: 200px;
+	}
+
+	.nav-container{
+		flex-direction: column;
 	}
 /* css specific properties col-xs-* or none for default */
 }
